<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/songs" android:title="@string/Songs" android:icon="@drawable/ic_album_white_48dp" />
    <item android:id="@+id/Favourite" android:title="@string/favourite" android:icon="@drawable/ic_favorite_white_48dp" />
    <item android:id="@+id/Equalizer" android:title="@string/equalizer" android:icon="@drawable/ic_tune_white_48dp" />
    <item android:id="@+id/Setting" android:title="@string/setting" android:icon="@drawable/ic_settings_input_component_white_48dp" />
    <item android:id="@+id/Share" android:title="@string/share" android:icon="@drawable/ic_share_white_48dp" />
    <item android:id="@+id/RateUs" android:title="@string/rate_us" android:icon="@drawable/ic_grade_white_48dp" />
    <item android:id="@+id/AboutUs" android:title="@string/about_us" android:icon="@drawable/ic_info_outline_white_48dp" />
    <item android:id="@+id/Exit" android:title="@string/exit" android:icon="@drawable/ic_power_settings_new_white_48dp" />

</menu>